i think i fixed all the wrapping issues?

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ html {
 	background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
+    width: 100%
+    height: 100%;
 }
 .flex-container-folders {
   display: inline-flex;
